@@ -1,4 +1,4 @@
-.TH SG_RAW "8" "August 2014" "sg3_utils\-1.40" SG3_UTILS
+.TH SG_RAW "8" "October 2014" "sg3_utils\-1.40" SG3_UTILS
 .SH NAME
 sg_raw \- send arbitrary SCSI command to a device
 .SH SYNOPSIS
@@ -111,7 +111,7 @@ When used in conjunction with the previous example, if both commands
 work then 'cmp i512.bin o512.bin' should show a match.
 .TP
 sg_raw \-\-infile=urandom.bin \-\-send=512 \-\-request=512 \-\-outfile=out.bin "/dev/bsg/7:0:0:0" 53 00 00 00 00 00 00 00 01 00
-This is a bidirectional XDREADWRITE(10) command being sent via a Linux
+This is a bidirectional XDWRITEREAD(10) command being sent via a Linux
 bsg device. Note that data is being read from "urandom.bin" and sent
 to the device (data\-out) while resulting data (data\-in) is placed
 in the "out.bin" file. Also note the length of both is 512 bytes
