@@ -2,7 +2,7 @@ sg3-utils (1.40-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 19 Oct 2014 02:00:00 +0200
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 24 Oct 2014 22:00:00 +0200
 
 sg3-utils (1.39-0.1) unstable; urgency=low
 
